# 2BLACKBUNTU-debpackages

./: README.md
.github/workflows/: docker-publish.yml
cracking/crowbar-1.0-1-amd64/DEBIAN/: control  postinst
cracking/gpp-decrypt-1.0-1-amd64/DEBIAN/: control  postinst
cracking/hashid-3.1-4-amd64/DEBIAN/: control  postinst
cracking/rainbowcrack-1.8-1-amd64/DEBIAN/: control  postinst
cracking/rsmangler-1.5-1-amd64/DEBIAN/: control  postinst
cracking/truecrack-3.6-1-amd64/DEBIAN/: control  postinst
exploitation/cge-1.0-1-amd64/DEBIAN/: control  postinst
exploitation/commix-3.4-1-amd64/DEBIAN/: control  postinst
exploitation/exe2hex-1.5-1-amd64/DEBIAN/: control  postinst
exploitation/jexboss-1.2-4-amd64/DEBIAN/: control  postinst
exploitation/libenom-1.0-1-amd64/DEBIAN/: control  postinst
exploitation/routersploit-3.4-1-amd64/DEBIAN/: control  postinst
exploitation/sharpmeter-1.0-1-amd64/DEBIAN/: control  postinst
exploitation/shellnoob-2.1-1-amd64/DEBIAN/: control  postinst
exploitation/unicorn-3.17-1-amd64/DEBIAN/: control  postinst
forensics/ddrescue-1.99-11-amd64/DEBIAN/: control  postinst
forensics/ddrescue-1.99-11-amd64/opt/blackbuntu/forensics/ddrescue/: .clang-format  Make-Android  Makefile  Makefile.android.arm32  Makefile.android.arm32pie  Makefile.android.arm64  PADDING  REL-ID  aes.c  aes.h  aes_arm32.c  aes_arm64.c  aes_arm64.h  aes_c.c  aes_c.h  aes_ossl.c  aes_ossl.h  aes_ossl10.c  aes_ossl11.c  aesni.c  aesni.h  archdep.h  autogen.sh  calchmac.py  checksum_file.c  checksum_file.h  compile.sh  configure.in  dd_rescue.1  dd_rescue.c  ddr_crypt.1  ddr_ctrl.h  ddr_lzo.1  ddr_plugin.h  fallocate64.h  ffs.h  ffs_sse42.c  fiemap.c  fiemap.h  file_zblock.c  (+44 more)
forensics/dumpzilla-1.0-1-amd64/DEBIAN/: control  postinst
forensics/pdf-parser-0.6-8-amd64/DEBIAN/: control  postinst
forensics/pdfid-0.2-4-amd64/DEBIAN/: control  postinst
hardening/dex2jar-2.1-1-amd64/DEBIAN/: control  postinst
information-gathering/dotdotpwn-3.0-2-amd64/DEBIAN/: control  postinst
information-gathering/enum4linux-0.8-9-amd64/DEBIAN/: control  postinst
information-gathering/enumiax-0.4-1-amd64/DEBIAN/: control  postinst
information-gathering/fierce-0.9-9-amd64/DEBIAN/: control  postinst
(+343 files in other folders)
